--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/yooonsj/helloworld_nodeJS#readme",
   "dependencies": {
-    "restler": "^3.3.0"
+    "restler": "^3.3.0",
+    "twitter": "^1.2.5"
   }
 }
